fix web responsive on safari

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,6 @@
     justify-content: space-between;
     align-items: center;
     color: #eee;
-    font-weight: bold;
 }
 
 .header-box span{
