--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,6 +1,5 @@
 .input-container{
     padding: 40px;
-    width: 100%;
 }
 
 .input{
